feat(auth): 添加用户信息自动获取功能
- 在首页组件中添加用户认证状态监听，自动获取用户信息
- 在个人资料页面添加用户信息自动更新功能
- 在认证状态管理中实现用户信息获取逻辑，支持本地存储同步
- 修复后端WebSocket配置中用户ID类型转换问题
- 更新CORS配置以支持新的域名访问
- 优化AI提供商配置服务中的并发安全性和缓存机制
- 改进图书解析服务中EPUB内容提取算法，提升性能和准确性
- 修复后端文档注释中的链接格式问题
- 重构部分服务依赖注入和代码组织结构